# VoicePaste

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agents/skills/voicepaste-local-asr/: SKILL.md
.github/workflows/: ci.yml
docs/: architecture.md
src/voicepaste/: __init__.py  audio.py  cli.py  clipboard.py  config.py  diagnostics.py  insert.py  models.py  notify.py  postprocess.py  state.py  transcribe.py  vad.py
tests/: test_cli_options.py  test_clipboard.py  test_config.py  test_diagnostics.py  test_insert_fallback.py  test_postprocess.py  test_quality_commands.py  test_shortcut.py  test_state.py  test_vad.py
