[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voicepaste"
version = "0.1.0"
description = "Local offline Linux voice transcription CLI with focused-window paste fallback."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "faster-whisper>=1.1.0",
  "huggingface-hub>=0.23.0",
  "numpy>=1.26.0",
  "sounddevice>=0.4.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
voicepaste = "voicepaste.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
