[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voicepaste"
version = "0.1.0"
description = "Local offline Linux voice transcription CLI with focused-window paste fallback."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "David de Villiers" },
]
keywords = ["speech-to-text", "dictation", "whisper", "linux", "offline", "asr"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Utilities",
]
dependencies = [
  "faster-whisper>=1.1.0",
  "huggingface-hub>=0.23.0",
  "numpy>=1.26.0",
  "sounddevice>=0.4.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/your-username/voicepaste"
Repository = "https://github.com/your-username/voicepaste"
Issues = "https://github.com/your-username/voicepaste/issues"

[project.scripts]
voicepaste = "voicepaste.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]
